--- a/Lab5/Css/login.css
+++ b/Lab5/Css/login.css
@@ -53,6 +53,18 @@ label[for = "url"]{
     margin-top: 20px;
 }
 
+/* #output{
+
+ border: 2px solid black;
+ height: 4em;
+ margin-top: 4em;
+ padding: 4px
+
+ 
+ 
+
+} */
+
 
 
 
