--- a/Lab5/Css/produ.css
+++ b/Lab5/Css/produ.css
@@ -4,6 +4,14 @@ body{
     margin: 0px;
     padding: 0px;
     margin-top: -1em;   
+    box-sizing: border-box;
+    
+    /* box-sizing: border-box;
+    vertical-align: middle;
+    text-decoration: none;
+    margin: 0;
+    padding: 0;
+    font-weight: 300; */
 }
 
 li{
@@ -101,11 +109,8 @@ label[for = "text"]{
    color: aliceblue;
 }
 #btn{
-    height: 40px;
-    margin-top: 10px;
-    margin-left: 300px;
-    float: right;
-    
+
+    margin-top: 2em;
 
 }
 #a{
@@ -113,6 +118,7 @@ label[for = "text"]{
     background-color: white;
     border: 2px solid darkblue;
     color: darkblue;
+    
 
 }
 #b{
@@ -129,10 +135,15 @@ label[for = "text"]{
     background-color: white;
     border: 2px solid rgb(74, 181, 217);
     color: rgb(74, 181, 217);
+   
 
 }
-#sup{
-    margin: 9px;
+label.sup{
+    /* margin: 9px; */
+    margin-top: 9px;
+    margin-bottom: 1px;
+    font-weight: 400;
+    
     
 }
 #name{
@@ -156,4 +167,17 @@ h6{
     background-size: auto;
     text-decoration: none;
 
+}
+#divall{
+
+
+}
+#quantity{
+    width: 100%;
+}
+#supplier{
+    width: 100%;
+}
+#date{
+    width: 100%;
 }
